added Yuriy Stepanovich Ryibnikov to index.html

--- a/style.css
+++ b/style.css
@@ -101,3 +101,10 @@ tv
         flex-direction: column;
     }
 }
+
+.ryibnikov{
+    width: 24px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
