added ryibnikov fixed

--- a/style.css
+++ b/style.css
@@ -101,3 +101,9 @@ tv
         flex-direction: column;
     }
 }
+.ryibnikov{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 24px;
+}
